--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "knex": "^3.1.0",
