--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "knex": "^3.1.0",
-    "morgan": "~1.9.1",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "sqlite3": "^5.1.7"
   },
   "main": "app.js",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4"
+  }
 }
