feat: added databaseSetup and JEST test

--- a/.env
+++ b/.env
@@ -1,24 +1,33 @@
-#APP
+# APP
 APP_PORT=3000
-NODE_ENV=development # choose between development / staging / production
+NODE_ENV=development # development / staging / production
+DB_AUTO_SETUP=false # true / false , SET TO TRUE IF YOU WANT THE APP TO AUTOMATICALLY SETUP THE DATABASE ON STARTUP
 
-#DATABASE - production env
+# DATABASE - production env
 PROD_DB_HOST=localhost
 PROD_DB_PORT=5432
 PROD_DB_USER=postgres
 PROD_DB_PASSWORD=postgres
 PROD_DB_NAME=pengaduan-masyarakat
 
-#DATABASE - development env
+# DATABASE - development env
 DEV_DB_HOST=localhost
 DEV_DB_PORT=5432
 DEV_DB_USER=postgres
 DEV_DB_PASSWORD=postgres
 DEV_DB_NAME=pengaduan-masyarakat-dev
 
-#DATABASE - staging env
+# DATABASE - staging env
 STG_DB_HOST=localhost
 STG_DB_PORT=5432
 STG_DB_USER=postgres
 STG_DB_PASSWORD=postgres
 STG_DB_NAME=pengaduan-masyarakat-stg
+
+# DATABASE - TEST env
+# USED IN JEST TEST, NO NEED TO SPECIFY NODE_ENV TO RUN THE TEST SINCE THE "test" ENV IS ALREADY PREDEFINED IN THE TEST FILE
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5432
+TEST_DB_USER=postgres
+TEST_DB_PASSWORD=postgres
+TEST_DB_NAME=pengaduan-masyarakat-test
