--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # APP
 APP_PORT=3000
 NODE_ENV=development # development / staging / production
-DB_AUTO_SETUP=false # true / false , SET TO TRUE IF YOU WANT THE APP TO AUTOMATICALLY SETUP THE DATABASE ON STARTUP
+DB_AUTO_SETUP=true # true / false , SET TO TRUE IF YOU WANT THE APP TO AUTOMATICALLY SETUP THE DATABASE ON STARTUP
 
 # DATABASE - production env
 PROD_DB_HOST=localhost
@@ -16,13 +16,6 @@ DEV_DB_PORT=5432
 DEV_DB_USER=postgres
 DEV_DB_PASSWORD=postgres
 DEV_DB_NAME=pengaduan-masyarakat-dev
-
-# DATABASE - staging env
-STG_DB_HOST=localhost
-STG_DB_PORT=5432
-STG_DB_USER=postgres
-STG_DB_PASSWORD=postgres
-STG_DB_NAME=pengaduan-masyarakat-stg
 
 # DATABASE - TEST env
 # USED IN JEST TEST, NO NEED TO SPECIFY NODE_ENV TO RUN THE TEST SINCE THE "test" ENV IS ALREADY PREDEFINED IN THE TEST FILE
