--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "knex": "^3.1.0",
     "pg": "^8.12.0",
     "sqlite3": "^5.1.7",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2"
+    "bcryptjs": "^2.4.3"
   },
   "main": "app.js",
   "author": "",
