--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
     "pg": "^8.12.0"
   },
   "main": "app.js",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
