--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "~1.4.4",
+    "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "sqlite3": "^5.1.7",
-    "bcryptjs": "^2.4.3",
-    "nodemailer": "^6.9.14"
+    "uuid": "^10.0.0"
   },
   "main": "app.js",
   "author": "",
