--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 APP_PORT=3000
 NODE_ENV=development # development / staging / production
 DB_AUTO_SETUP=true # true / false , SET TO TRUE IF YOU WANT THE APP TO AUTOMATICALLY SETUP THE DATABASE ON STARTUP
+JWT_SECRET=secretkey
 EMAIL_VERIFICATION_URL=http://localhost:3000
 
 # DATABASE - production env
