--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
-    "sqlite3": "^5.1.7",
     "uuid": "^10.0.0"
   },
   "main": "app.js",
