--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ JWT_SECRET=secretkey
 EMAIL_USER=cahyonochusaini@gmail.com
 EMAIL_PASSWORD=xkbhlvaxkbjnideg
 EMAIL_VERIFICATION_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
 
 # DATABASE - production env
 PROD_DB_HOST=localhost
