--- a/.env
+++ b/.env
@@ -8,6 +8,10 @@ EMAIL_PASSWORD=xkbhlvaxkbjnideg
 EMAIL_VERIFICATION_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:5173
 
+# SUPERADMIN
+SUPERADMIN_EMAIL=superadmin@pengaduanmasyarakat.blog
+SUPERADMIN_PASSWORD=superadmin
+
 # DATABASE - production env
 PROD_DB_HOST=localhost
 PROD_DB_PORT=5432
